started adding plaid->dwolla integration

--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,8 @@
       });
     }
   </script>
+  <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
+  <script src="plaid.js" defer></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
